fix logo at bottom on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -449,6 +449,10 @@ h3 {
   #credits {
     display: block !important;
   }
+
+  #credits-layout-logo {
+    margin-right: 0 !important;
+  }
 }
 
 #credits-layout-logo {
